update REST API specification
