# rest/restapi/operations/update_parameters.go
@@ -1,0 +1,102 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+
+	strfmt "github.com/go-openapi/strfmt"
+)
+
+// NewUpdateParams creates a new UpdateParams object
+// with the default values initialized.
+func NewUpdateParams() UpdateParams {
+	var ()
+	return UpdateParams{}
+}
+
+// UpdateParams contains all the bound params for the update operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters update
+type UpdateParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*
+	  Required: true
+	  In: query
+	*/
+	Check bool
+	/*
+	  Required: true
+	  In: path
+	*/
+	Container string
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls
+func (o *UpdateParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+	o.HTTPRequest = r
+
+	qs := runtime.Values(r.URL.Query())
+
+	qCheck, qhkCheck, _ := qs.GetOK("check")
+	if err := o.bindCheck(qCheck, qhkCheck, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	rContainer, rhkContainer, _ := route.Params.GetOK("container")
+	if err := o.bindContainer(rContainer, rhkContainer, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *UpdateParams) bindCheck(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	if !hasKey {
+		return errors.Required("check", "query")
+	}
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+	if err := validate.RequiredString("check", "query", raw); err != nil {
+		return err
+	}
+
+	value, err := swag.ConvertBool(raw)
+	if err != nil {
+		return errors.InvalidType("check", "query", "bool", raw)
+	}
+	o.Check = value
+
+	return nil
+}
+
+func (o *UpdateParams) bindContainer(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	o.Container = raw
+
+	return nil
+}
