# rest/restapi/operations/update_urlbuilder.go
@@ -1,0 +1,111 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"errors"
+	"net/url"
+	golangswaggerpaths "path"
+	"strings"
+
+	"github.com/go-openapi/swag"
+)
+
+// UpdateURL generates an URL for the update operation
+type UpdateURL struct {
+	Container string
+
+	Check bool
+
+	_basePath string
+	// avoid unkeyed usage
+	_ struct{}
+}
+
+// WithBasePath sets the base path for this url builder, only required when it's different from the
+// base path specified in the swagger spec.
+// When the value of the base path is an empty string
+func (o *UpdateURL) WithBasePath(bp string) *UpdateURL {
+	o.SetBasePath(bp)
+	return o
+}
+
+// SetBasePath sets the base path for this url builder, only required when it's different from the
+// base path specified in the swagger spec.
+// When the value of the base path is an empty string
+func (o *UpdateURL) SetBasePath(bp string) {
+	o._basePath = bp
+}
+
+// Build a url path and query string
+func (o *UpdateURL) Build() (*url.URL, error) {
+	var result url.URL
+
+	var _path = "/rest/v1/update/{container}"
+
+	container := o.Container
+	if container != "" {
+		_path = strings.Replace(_path, "{container}", container, -1)
+	} else {
+		return nil, errors.New("Container is required on UpdateURL")
+	}
+	_basePath := o._basePath
+	if _basePath == "" {
+		_basePath = "/"
+	}
+	result.Path = golangswaggerpaths.Join(_basePath, _path)
+
+	qs := make(url.Values)
+
+	check := swag.FormatBool(o.Check)
+	if check != "" {
+		qs.Set("check", check)
+	}
+
+	result.RawQuery = qs.Encode()
+
+	return &result, nil
+}
+
+// Must is a helper function to panic when the url builder returns an error
+func (o *UpdateURL) Must(u *url.URL, err error) *url.URL {
+	if err != nil {
+		panic(err)
+	}
+	if u == nil {
+		panic("url can't be nil")
+	}
+	return u
+}
+
+// String returns the string representation of the path with query string
+func (o *UpdateURL) String() string {
+	return o.Must(o.Build()).String()
+}
+
+// BuildFull builds a full url with scheme, host, path and query string
+func (o *UpdateURL) BuildFull(scheme, host string) (*url.URL, error) {
+	if scheme == "" {
+		return nil, errors.New("scheme is required for a full url on UpdateURL")
+	}
+	if host == "" {
+		return nil, errors.New("host is required for a full url on UpdateURL")
+	}
+
+	base, err := o.Build()
+	if err != nil {
+		return nil, err
+	}
+
+	base.Scheme = scheme
+	base.Host = host
+	return base, nil
+}
+
+// StringFull returns the string representation of a complete url
+func (o *UpdateURL) StringFull(scheme, host string) string {
+	return o.Must(o.BuildFull(scheme, host)).String()
+}
